--- a/templates/form.html
+++ b/templates/form.html
@@ -2,41 +2,69 @@
 <html>
     <head>
         <title>Reusable Form Demo</title>
+                <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+        <meta name="viewport" content = "width=device-width, initial-scale=1.0">
+
     </head>
     <body>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                <ul>
-                    {% for message in messages %}
-                        <li>{{ message[1] }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        {% endwith %}
-        <form action="" method="post">
-            {{ form.csrf }}
 
-            <div class="input text">
-                {{ form.name.label }} {{ form.name }}
-            </div>
-            <div class="input text">
-                {{ form.surname.label }} {{ form.surname }}
-            </div>
-            <div class="input text">
-                {{ form.job.label }} {{ form.job }}
-            </div>
-            <div class="input text">
-                {{ form.company.label }} {{ form.company }}
-            </div>
-            <div class="input text">
-                {{ form.city.label }} {{ form.city }}
-            </div>
-            <div class="input text">
-                {{ form.country.label }} {{ form.country }}
-            </div>
-            <div class="input submit">
-                <input type="submit" value="Submit" />
-            </div>
-        </form>
+        <div class="container">
+            <h2 class="text-center">Flask Web Form</h2>
+            <form action="" method="post" role="form">
+                {{ form.csrf }}
+                <div class="form-group col-md-4">
+
+                    <label for="name">Name:</label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="What's your name?" required>
+
+                    <label for="name">Surname:</label>
+                    <input type="text" class="form-control" id="surname" name="surname" placeholder="What's your surname?" required>
+
+                    <label for="name">Job:</label>
+                    <input type="text" class="form-control" id="job" name="job" placeholder="What's your job?" required>
+
+                    <label for="name">Company:</label>
+                    <input type="text" class="form-control" id="company" name="company" placeholder="What's your company?" required>
+
+                    <label for="name">City:</label>
+                    <input type="text" class="form-control" id="city" name="city" placeholder="What's your city?" required>
+
+                    <label for="name">Country:</label>
+                    <input type="text" class="form-control" id="country" name="country" placeholder="What's your country?" required>
+
+                </div>
+                <div class="col-md-12">
+                <button type="submit" class="btn btn-success">Submit</button>
+                </div>
+            </form>
+
+
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+
+            {% for message in messages %}
+                {% if "Error" not in message[1]: %}
+                    <div class="alert alert-info">
+                    <strong>Success! </strong> {{ message[1] }}
+                    </div>
+                {% endif %}
+
+                {% if "Error" in message[1]: %}
+                    <div class="alert alert-warning">
+                    {{ message[1] }}
+                    </div>
+                {% endif %}
+            {% endfor %}
+                {% endif %}
+            {% endwith %}
+        </div>
     </body>
 </html>
