--- a/templates/form.html
+++ b/templates/form.html
@@ -15,7 +15,7 @@
 
     </head>
     <body>
-<a href="/search">click here</a>
+<a href="/search">click here for search!</a>
         <div class="container">
             <h2 class="text-center">Flask Web Form</h2>
             <form action="" method="post" role="form">
