--- a/templates/search.html
+++ b/templates/search.html
@@ -12,23 +12,37 @@
         <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
+
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">Search</h2>
-        <form action="" method="post" role="form">
-            {{ form.csrf }}
-            <div class="form-group col-md-4">
+        <div class="row">
+            <h2 class="text-center">Search</h2>
+            <form action="#" method="post" role="form">
+                {{ form.csrf }}
+                <div class="form-group col-md-4">
 
-                <label for="searched">Search:</label>
-                <input type="text" class="form-control" id="searched" name="searched" placeholder="Search here.." required>
+                    <label for="searched">Search:</label>
+                    <input type="text" class="form-control" id="searched" name="searched" placeholder="Search here.." required>
 
+                </div>
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-success margin-bottom" >Submit</button>
+                </div>
+            </form>
+        </div>
+        {% for row in campo %}
+            <div class="row">
+                {% for col in row %}
+                <div class="col-md-1">
+                    {{ col }}
+                </div>
+                {% endfor %}
+                <button type="button" class="btn btn-info" ><a href="/edit/{{row.id}}">Change!</a></button>
             </div>
-            <div class="col-md-12">
-                <button type="submit" class="btn btn-success" >Submit</button>
-            </div>
-        </form>
-        {{ var }}
+        <hr>
+        {% endfor %}
     </div>
 </body>
 </html>
